# performance-mind-palace

./: .gitignore  CMakeLists.txt  IMPLEMENTATION-PLAN.md  README.md  chunks-and-collision-plan.md  collision-detection-plan.md  game-engine-plan.md  marching-cubes-plan.md
shaders/: shader.vert
src/: camera.cpp  camera.h  chunk.h  chunk_manager.cpp  chunk_manager.h  main.cpp  marching_cubes.cpp  marching_cubes.h  marching_cubes_tables.h  volume_generator.cpp  volume_generator.h
